# habits

./: Cargo.toml  README.md  build.rs  deploy.sh  run.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  index.html  manifest.json
frontend/src/: main.rs
migrations/: 20230529185154_create_habits_table.sql  20230530214724_create_completions.sql  20230615194155_anti_habits.sql
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
