[package]
name = "habits"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.17.0"
axum = "0.6.18"
axum-extra = { version = "0.4.2", features = ["spa"] }
shuttle-axum = "0.17.0"
tokio = "1.28.1"
shuttle-static-folder = "0.17.0"
shared = { path = "../shared" }
