[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen-futures = "0.4"
shared = { path = "../shared" }
gloo-console = "0.2.3"
chrono = "0.4.26"
stylist = {version = "0.12.0", features = ["yew"]}
